// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseTranslation component with id, defaultMessage props 1`] = `
<span>
  Hello
</span>
`;

exports[`BaseTranslation component with message that holds another in values (passed via props) 1`] = `
<span>
  Hello 
  <span>
    Name: John
  </span>
  , 100
</span>
`;

exports[`BaseTranslation component with message that holds another message object in values (passed via props) 1`] = `
<span>
  Hello 
  Name: John
  , 100
</span>
`;

exports[`BaseTranslation component with message that holds string in value (passed via props) 1`] = `
<span>
  Name: John
</span>
`;
